# face-rec-rtc

./: .coverage  .env.example  .gitignore  README.md  TEST_DOCUMENTATION.md  pyproject.toml  pytest.ini
.kilocode/: mcp.json
face_recognition/: __init__.py  base_group_manager.py  face_group_manager.py  face_recognition_manager.py  known_face_group.py  unknown_face_group.py
face_recognition/saved_images/known/0d73d7da-10b8-4674-8e30-5c5ca62ebc76/: person_data.json
face_recognition/saved_images/known/2623d324-0ac0-4023-a735-528414f8fde0/: person_data.json
face_recognition/saved_images/known/4766250f-e656-4984-b971-4932e8e701c2/: person_data.json
face_recognition/saved_images/known/48dec890-9498-4bac-bbf5-391bfcc29937/: person_data.json
face_recognition/saved_images/known/a2eb631b-07c8-4f9d-92f5-8ff787cf00f3/: person_data.json
face_recognition/saved_images/known/bd02d1cf-9986-4eb4-b11c-c1c968f4aea0/: person_data.json
face_recognition/saved_images/known/c7a2e23a-347a-4112-9b9a-c2da7480dce4/: person_data.json
face_recognition/saved_images/known/ee9fc530-83d3-49ba-ae8c-96974c3d5123/: person_data.json
face_recognition/saved_images/unknown/c127ea7a-bcbb-47a4-8b16-ef850f030336/: person_data.json
shared/: constants.py
tests/: __init__.py  test_load_from_saved_images.py
